<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainActivity">

    <ImageView
        android:id="@+id/imageViewFon2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:tint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageBetWin"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/betwin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="CHOOSE TRAIN"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="48sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBetWin"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/weight_loss"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="36sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonRelief"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChoose"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRelief"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/relief"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="36sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonPower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWeight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/power"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="36sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonUniversal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRelief" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonUniversal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/universal"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="36sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@id/buttonChoose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPower" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_pink"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/choose"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="36sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUniversal" />

</androidx.constraintlayout.widget.ConstraintLayout>